--- a/index.html
+++ b/index.html
@@ -10,18 +10,184 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
+        crossorigin="anonymous" referrerpolicy="no-referrer" >
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tablette.css">
+    
+    
 </head>
 
 <body>
+    <!--HEADER-->
     <div class="main-container">
-        <header></header>
+        <header class="booki">
+            <a href="index.html"><img src="images/logo/Booki@3x.png" class="logo" alt="logo de Booki"></a>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#hebergement" class="logement">Hébergements</a></li>
+                    <li><a href="#activite-marseille" class="activites">Activités</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
-            <div class="hebergements-and-populaires">
-                <section class="hebergements">
+            <!--RECHERCHE ET FILTRES-->
+            <form action="/recherche" method="get" id="searchForm">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
+                <div class="result">
+                    <i class="fas fa-map-marker-alt map-icon"></i>
+                    <input type="text" id="city" name="city" placeholder="Marseille, France">
+                    <input class="hidden-mobile" type="button" value="Rechercher">
+                    <input class="hidden-desktop"><i class="fas fa-search hidden-desktop"></i>
+                </div>
+            </form>
 
+            <div class="filter">
+                <span>Filtres</span>
+                <div class="bouton">
+                    <button type="button" class="economy"><i class="fa-solid fa-money-bill-wave"></i>Économique</button>
+                    <button type="button" class="family"><i class="fa-solid fa-person"></i>Familial</button>
+                    <button type="button" class="romance"><i class="fa-solid fa-heart"></i>Romantique</button>
+                    <button type="button" class="pepites"><i class="fa-solid fa-fire"></i>Nos pépites</button>
+                </div>
+            </div>
+            <div class="info">
+                <i class="fa-solid fa-info"></i>
+                <p>Plus de 500 logements sont disponible dans cette ville</p>
+            </div>
+            <br>
+
+            <!--HEBERGEMENT A MARSEILLE-->
+
+            <div class="hebergements-and-populaires">
+                <section class="hebergements" id="hebergement">
+                    <h2 class="section-title">Hébergements à Marseille</h2>
+
+                    <div id="hebergements">
+                        <a href="#" class="card-link">
+                            <article class="card">
+                                <img src="images/hebergements/fred-kleber.jpg" alt="photo d'une chambre dans l'Hôtel du port">
+                                <div class="card-content-hotel">
+                                    <div class="card-txt">
+                                        <h3 class="card-title-hotel">Hôtel du port</h3>
+                                        <p class="card-subtitle-hotel">Nuit à partir de 52<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+
+                        <a href="#" class="card-link">
+                            <article class="card">
+                                <img src="images/hebergements/febrian-zakaria.jpg" alt="photo d'une chambre dans l'Hôtel chez Amina">
+                                <div class="card-content-hotel">
+                                    <div class="card-txt">
+                                        <h3 class="card-title-hotel">Hôtel Chez Amina</h3>
+                                        <p class="card-subtitle-hotel">Nuit à partir de 96<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#" class="card-link">
+                            <article class="card">
+                                <img src="images/hebergements/reisetopia.jpg" alt="photo d'une chambre dans l'Hôtel Les mouettes">
+                                <div class="card-content-hotel">
+                                    <div class="card-txt">
+                                        <h3 class="card-title-hotel">Hôtel Les mouettes</h3>
+                                        <p class="card-subtitle-hotel">Nuit à partir de 76<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+
+                        <a href="#" class="card-link">
+                            <article class="card">
+                                <img src="images/hebergements/annie-spratt.jpg" alt="photo d'une chambre dans l'Hôtel de la mer">
+                                <div class="card-content-hotel">
+                                    <div class="card-txt">
+                                        <h3 class="card-title-hotel">Hôtel de la mer</h3>
+                                        <p class="card-subtitle-hotel">Nuit à partir de 46<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+
+                        <a href="#" class="card-link">
+                            <article class="card">
+                                <img src="images/hebergements/marcus-loke.jpg" alt="photo d'une chambre dans l'Auberge La Canebière">
+                                <div class="card-content-hotel">
+                                    <div class="card-txt">
+                                        <h3 class="card-title-hotel">Auberge La Canebière</h3>
+                                        <p class="card-subtitle-hotel">Nuit à partir de 25<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+
+                        <a href="#" class="card-link">
+                            <article class="card">
+                                <img src="images/hebergements/nicate-lee.jpg" alt="photo d'une chambre dans l'Auberge Le Panier">
+                                <div class="card-content-hotel">
+                                    <div class="card-txt">
+                                        <h3 class="card-title-hotel">Auberge Le Panier</h3>
+                                        <p class="card-subtitle-hotel">Nuit à partir de 23<span class="euro">€</span></p>
+                                    </div>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                    </div>
+
+                    <h4 class="text-fin-fred"><a href="#">Afficher plus</a></h4>
                 </section>
+
+                <!--LES POPULAIRES-->
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -88,9 +254,82 @@
                     </div>
                 </section>
             </div>
+
+            <!--ACTIVITE A MARSEILLE-->
+
+            <section class="marseille-activites" id="activite-marseille">
+                <h2>Activités à Marseille</h2>
+
+                <div id="marseille-list">
+                    <div class="card">
+                        <a href="#">
+                            <article class="marseille">
+                                <img src="images/activites/reno-laithienne.jpg" alt="Photo sur Le Vieux-Port">
+                                <h3>Vieux-Port</h3>
+                            </article>
+                        </a>
+                    </div>
+
+                    <div class="card">
+                        <a href="#">
+                            <article class="marseille">
+                                <img src="images/activites/paul-hermann.jpg" alt="Photo de Fort de Pomègues">
+                                <h3>Fort de Pomègues</h3>
+                            </article>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="#">
+                            <article class="marseille">
+                                <img src="images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
+                                <h3>Parc national des Calanques</h3>
+                            </article>
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="#">
+                            <article class="marseille">
+                                <img src="images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                            </article>
+                        </a>
+                    </div>
+                </div>
+            </section>
         </main>
-        <footer></footer>
+
+        <!--FOOTER-->
+
+        <footer>
+            <section class="footer-container">
+                <div class="a-propos">
+                    <h5>À Propos</h5>
+                    <ul>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions générales</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer-container">
+                <div class="nos-hebergements">
+                    <h5>Nos hébergements</h5>
+                    <ul>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">Proposer votre hôtel</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer-container">
+                <div class="assistance">
+                    <h5>Assistance</h5>
+                    <ul>
+                        <li><a href="#">Centre d'aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                    </ul>
+                </div>
+            </section>
+        </footer>
     </div>
 </body>
-
 </html>
