Integration de Booki en version mobile et tablette

--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" >
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/tablette.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/tablette.css">
+    <link rel="stylesheet" href="./css/mobile.css">
+
     
     
 </head>
 
 <body>
+
     <!--HEADER-->
+
     <div class="main-container">
         <header class="booki">
             <a href="index.html"><img src="images/logo/Booki@3x.png" class="logo" alt="logo de Booki"></a>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#hebergement" class="logement">Hébergements</a></li>
-                    <li><a href="#activite-marseille" class="activites">Activités</a></li>
+            <nav>
+                <ul class="navbar">
+                  <li><a href="#hebergement" class="lien-header">Hébergements</a></li>
+                  <li><a href="#activite-marseille" class="lien-header">Activités</a></li>
                 </ul>
-            </nav>
+              </nav>
         </header>
         <main>
+
             <!--RECHERCHE ET FILTRES-->
+
             <form action="/recherche" method="get" id="searchForm">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
@@ -66,7 +72,7 @@
                     <div id="hebergements">
                         <a href="#" class="card-link">
                             <article class="card">
-                                <img src="images/hebergements/fred-kleber.jpg" alt="photo d'une chambre dans l'Hôtel du port">
+                                <img src="./images/hebergements/fred-kleber.jpg" alt="photo d'une chambre dans l'Hôtel du port">
                                 <div class="card-content-hotel">
                                     <div class="card-txt">
                                         <h3 class="card-title-hotel">Hôtel du port</h3>
@@ -86,7 +92,7 @@
 
                         <a href="#" class="card-link">
                             <article class="card">
-                                <img src="images/hebergements/febrian-zakaria.jpg" alt="photo d'une chambre dans l'Hôtel chez Amina">
+                                <img src="./images/hebergements/febrian-zakaria.jpg" alt="photo d'une chambre dans l'Hôtel chez Amina">
                                 <div class="card-content-hotel">
                                     <div class="card-txt">
                                         <h3 class="card-title-hotel">Hôtel Chez Amina</h3>
@@ -105,7 +111,7 @@
                         </a>
                         <a href="#" class="card-link">
                             <article class="card">
-                                <img src="images/hebergements/reisetopia.jpg" alt="photo d'une chambre dans l'Hôtel Les mouettes">
+                                <img src="./images/hebergements/reisetopia.jpg" alt="photo d'une chambre dans l'Hôtel Les mouettes">
                                 <div class="card-content-hotel">
                                     <div class="card-txt">
                                         <h3 class="card-title-hotel">Hôtel Les mouettes</h3>
@@ -125,7 +131,7 @@
 
                         <a href="#" class="card-link">
                             <article class="card">
-                                <img src="images/hebergements/annie-spratt.jpg" alt="photo d'une chambre dans l'Hôtel de la mer">
+                                <img src="./images/hebergements/annie-spratt.jpg" alt="photo d'une chambre dans l'Hôtel de la mer">
                                 <div class="card-content-hotel">
                                     <div class="card-txt">
                                         <h3 class="card-title-hotel">Hôtel de la mer</h3>
@@ -145,7 +151,7 @@
 
                         <a href="#" class="card-link">
                             <article class="card">
-                                <img src="images/hebergements/marcus-loke.jpg" alt="photo d'une chambre dans l'Auberge La Canebière">
+                                <img src="./images/hebergements/marcus-loke.jpg" alt="photo d'une chambre dans l'Auberge La Canebière">
                                 <div class="card-content-hotel">
                                     <div class="card-txt">
                                         <h3 class="card-title-hotel">Auberge La Canebière</h3>
@@ -165,7 +171,7 @@
 
                         <a href="#" class="card-link">
                             <article class="card">
-                                <img src="images/hebergements/nicate-lee.jpg" alt="photo d'une chambre dans l'Auberge Le Panier">
+                                <img src="./images/hebergements/nicate-lee.jpg" alt="photo d'une chambre dans l'Auberge Le Panier">
                                 <div class="card-content-hotel">
                                     <div class="card-txt">
                                         <h3 class="card-title-hotel">Auberge Le Panier</h3>
@@ -188,6 +194,7 @@
                 </section>
 
                 <!--LES POPULAIRES-->
+
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -264,7 +271,7 @@
                     <div class="card">
                         <a href="#">
                             <article class="marseille">
-                                <img src="images/activites/reno-laithienne.jpg" alt="Photo sur Le Vieux-Port">
+                                <img src="./images/activites/reno-laithienne.jpg" alt="Photo sur Le Vieux-Port">
                                 <h3>Vieux-Port</h3>
                             </article>
                         </a>
@@ -273,7 +280,7 @@
                     <div class="card">
                         <a href="#">
                             <article class="marseille">
-                                <img src="images/activites/paul-hermann.jpg" alt="Photo de Fort de Pomègues">
+                                <img src="./images/activites/paul-hermann.jpg" alt="Photo de Fort de Pomègues">
                                 <h3>Fort de Pomègues</h3>
                             </article>
                         </a>
@@ -281,7 +288,7 @@
                     <div class="card">
                         <a href="#">
                             <article class="marseille">
-                                <img src="images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
+                                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des Calanques">
                                 <h3>Parc national des Calanques</h3>
                             </article>
                         </a>
@@ -289,7 +296,7 @@
                     <div class="card">
                         <a href="#">
                             <article class="marseille">
-                                <img src="images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+                                <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                                 <h3>Notre-Dame-de-la-Garde</h3>
                             </article>
                         </a>
